--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,16 @@
 @font-face {
     font-family: Fraunces;
-    src: url('/fonts/Fraunces_72pt-Bold.ttf');
+    src: url('../fonts/Fraunces_72pt-Bold.ttf');
 }
 
 @font-face {
     font-family: Montserrat-Bold;
-    src: url('/fonts/Montserrat-Bold.ttf');
+    src: url('../fonts/Montserrat-Bold.ttf');
 }
 
 @font-face {
     font-family: Montserrat-Medium;
-    src: url('/fonts/Montserrat-Medium.ttf');
+    src: url('../fonts/Montserrat-Medium.ttf');
 }
 
 :root {
